Add asset and investment relation logic